@@ -356,47 +356,48 @@
 	>
 	> -Xmx == -Xms 推荐
 
-2. GC 日志分析
+2. 名词解释
+
+	> Young GC / Full GC（yong gc + old gc）
+	>
+	> Minor GC / Major GC
 
 3. -XX:+UseParallelGC 并行 GC（Java8 默认 GC 策略）
 
-  > 新生代 GC 日志
-  >
-  > 2021-11-15T21:23:37.032-0800: 0.224: [GC (Allocation Failure) [PSYoungGen: 262144K->43509K(305664K)] 262144K->82306K(1005056K), 0.1025653 secs] [Times: user=0.03 sys=0.05, real=0.10 secs] 
-  >
-  > 
-  >
-  > PSYoungGen -- Young GC
-  >
-  > 
-  >
-  > 老年代 GC 日志
-  >
-  > 2021-11-15T21:23:37.794-0800: 0.986: [Full GC (Ergonomics) [PSYoungGen: 38366K->0K(232960K)] [ParOldGen: 609474K->321147K(699392K)] 647841K->321147K(932352K), [Metaspace: 2717K->2717K(1056768K)], 0.0522962 secs] [Times: user=0.21 sys=0.01, real=0.05 secs]
-  >
-  > Full GC (Ergonomics) -- Full GC
-  >
-  > 
-  >
-  > 分类
-  >
-  > {时间}: [{堆内存变量情况/GC 情况}] [{ CPU 使用情况}]
-  >
-  > {堆内存变量情况/GC 情况}　==> {GC 原因}，{GC 并行执行使用时间/GC 暂停时间}
-  >
-  > 
-  >
-  > 该垃圾回收器默认启动了 AdaptiveSizePolicy 自适应大小策略。
-  >
-  > -XX:+UseAdaptiveSizePolicy
-  >
-  > 参考：https://segmentfault.com/a/1190000016427465
+  - java 命令 / JVM 参数
 
-4. Young GC / Full GC（yong gc + old gc）
+  	>  java -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseParallelGC -Xmx1g -Xms1g GCLogAnalysis
 
-	- Minor GC / Major GC
+  - GC 日志分析
 
-5. -XX:+UseSerialGC 串行 GC
+      > 新生代 GC 日志
+      >
+      > 2021-11-15T21:23:37.032-0800: 0.224: [GC (Allocation Failure) [PSYoungGen: 262144K->43509K(305664K)] 262144K->82306K(1005056K), 0.1025653 secs] [Times: user=0.03 sys=0.05, real=0.10 secs] 
+      >
+      > 
+      >
+      > PSYoungGen -- Young GC
+      >
+      > 
+      >
+      > 老年代 GC 日志
+      >
+      > 2021-11-15T21:23:37.794-0800: 0.986: [Full GC (Ergonomics) [PSYoungGen: 38366K->0K(232960K)] [ParOldGen: 609474K->321147K(699392K)] 647841K->321147K(932352K), [Metaspace: 2717K->2717K(1056768K)], 0.0522962 secs] [Times: user=0.21 sys=0.01, real=0.05 secs]
+      >
+      > 
+      >
+      > Full GC (Ergonomics) -- Full GC
+      >
+      
+  - 其他
+    
+      > -XX:+UseAdaptiveSizePolicy
+      >
+      > 该垃圾回收器默认启动了 AdaptiveSizePolicy 自适应大小策略。
+      >
+      > 参考：https://segmentfault.com/a/1190000016427465
+
+4. -XX:+UseSerialGC 串行 GC
 
   - java 命令 / JVM 参数
 
@@ -435,25 +436,46 @@
       >
       > 
 
-6. -XX:+UseConcMarkSweepGC， CMS
+5. -XX:+UseConcMarkSweepGC， CMS GC
 
-	> 清理 OLD 区
-	>
-	> ParNew
-	>
-	> 2021-11-13T13:52:51.681-0800: [GC (Allocation Failure) 2021-11-13T13:52:51.681-0800: [ParNew: 279616K->34943K(314560K), 0.0360799 secs] 279616K->91983K(1013632K), 0.0361222 secs] [Times: user=0.05 sys=0.07, real=0.03 secs] 
-	>
-	> ......
-	>
-	> 2021-11-13T13:52:52.093-0800: [GC (CMS Initial Mark) [1 CMS-initial-mark: 379704K(699072K)] 421274K(1013632K), 0.0004674 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+  - java 命令
 
-7. -XX:+UseG1GC，G1 GC
+  	> java -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseConcMarkSweepGC -Xmx1g -Xms1g GCLogAnalysis
 
-8. GC 相关工具
+  - GC 日志分析
 
-	> GCEasy，在线
-	>
-	> GCViewer，jar
+      > 年轻代 GC 日志
+      >
+      > 2021-11-15T22:48:11.487-0800: 0.241: [GC (Allocation Failure) 2021-11-15T22:48:11.487-0800: 0.241: [ParNew: 279616K->34943K(314560K), 0.0343541 secs] 279616K->88251K(1013632K), 0.0344012 secs] [Times: user=0.05 sys=0.07, real=0.04 secs] 
+      >
+      > 
+      >
+      > 老年代 GC 日志
+      >
+      > 2021-11-15T22:48:11.920-0800: 0.674: [GC (CMS Initial Mark) [1 CMS-initial-mark: 368207K(699072K)] 408857K(1013632K), 0.0001623 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+      > 2021-11-15T22:48:11.920-0800: 0.674: [CMS-concurrent-mark-start]
+      > 2021-11-15T22:48:11.923-0800: 0.677: [CMS-concurrent-mark: 0.003/0.003 secs] [Times: user=0.01 sys=0.00, real=0.00 secs] 
+      > 2021-11-15T22:48:11.923-0800: 0.677: [CMS-concurrent-preclean-start]
+      > 2021-11-15T22:48:11.924-0800: 0.678: [CMS-concurrent-preclean: 0.001/0.001 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+      > 2021-11-15T22:48:11.924-0800: 0.679: [CMS-concurrent-abortable-preclean-start]
+      > 2021-11-15T22:48:11.958-0800: 0.713: [GC (Allocation Failure) 2021-11-15T22:48:11.958-0800: 0.713: [ParNew: 314558K->34944K(314560K), 0.0458561 secs] 682766K->477631K(1013632K), 0.0458898 secs] [Times: user=0.20 sys=0.03, real=0.05 secs] 
+      > 2021-11-15T22:48:12.040-0800: 0.794: [GC (Allocation Failure) 2021-11-15T22:48:12.040-0800: 0.794: [ParNew: 314560K->34943K(314560K), 0.0405678 secs] 757247K->550159K(1013632K), 0.0406022 secs] [Times: user=0.19 sys=0.02, real=0.04 secs] 
+      > 2021-11-15T22:48:12.110-0800: 0.864: [GC (Allocation Failure) 2021-11-15T22:48:12.110-0800: 0.864: [ParNew: 314559K->34944K(314560K), 0.0531434 secs] 829775K->631728K(1013632K), 0.0531785 secs] [Times: user=0.22 sys=0.03, real=0.05 secs] 
+      > 2021-11-15T22:48:12.199-0800: 0.954: [GC (Allocation Failure) 2021-11-15T22:48:12.199-0800: 0.954: [ParNew: 314560K->34944K(314560K), 0.0490043 secs] 911344K->715426K(1013632K), 0.0490591 secs] [Times: user=0.21 sys=0.02, real=0.05 secs] 
+      > 2021-11-15T22:48:12.249-0800: 1.003: [CMS-concurrent-abortable-preclean: 0.008/0.324 secs] [Times: user=0.96 sys=0.10, real=0.32 secs] 
+      > 2021-11-15T22:48:12.249-0800: 1.003: [GC (CMS Final Remark) [YG occupancy: 35088 K (314560 K)]2021-11-15T22:48:12.249-0800: 1.003: [Rescan (parallel) , 0.0003421 secs]2021-11-15T22:48:12.249-0800: 1.003: [weak refs processing, 0.0000198 secs]2021-11-15T22:48:12.249-0800: 1.003: [class unloading, 0.0002390 secs]2021-11-15T22:48:12.249-0800: 1.004: [scrub symbol table, 0.0002569 secs]2021-11-15T22:48:12.250-0800: 1.004: [scrub string table, 0.0001381 secs][1 CMS-remark: 680482K(699072K)] 715570K(1013632K), 0.0010442 secs] [Times: user=0.01 sys=0.00, real=0.01 secs] 
+      > 2021-11-15T22:48:12.250-0800: 1.004: [CMS-concurrent-sweep-start]
+      > 2021-11-15T22:48:12.251-0800: 1.005: [CMS-concurrent-sweep: 0.001/0.001 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+      > 2021-11-15T22:48:12.251-0800: 1.005: [CMS-concurrent-reset-start]
+      > 2021-11-15T22:48:12.254-0800: 1.008: [CMS-concurrent-reset: 0.003/0.003 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+
+6. -XX:+UseG1GC，G1 GC
+
+7. GC 相关工具
+
+  > GCEasy，在线
+  >
+  > GCViewer，jar
 
 ### JVM 线程堆栈数据分析
 
